// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomInput renders correctly 1`] = `
<DocumentFragment>
  <input
    data-testid="custom-input"
    type="text"
  />
</DocumentFragment>
`;

exports[`CustomInput renders correctly with props 1`] = `
<DocumentFragment>
  <input
    data-testid="custom-input"
    name="test"
    placeholder="test"
    type="text"
  />
</DocumentFragment>
`;
